--- a/go.html
+++ b/go.html
@@ -14,7 +14,7 @@
     <div class="box">
         <h2>LUCKYPITCH</h2>
         <p>Kattints a gombra a folytatáshoz!</p>
-        <a href="https://luckypitch.onrender.com/Home.html" id="openLink" class="btn">BELÉPÉS</a>
+        <a href="https://luckypitch.onrender.com/" id="openLink" class="btn">BELÉPÉS</a>
     </div>
 
     <script>
@@ -34,4 +34,5 @@
         };
     </script>
 </body>
+
 </html>
