--- a/Home.html
+++ b/Home.html
@@ -94,15 +94,20 @@
 
         /* STATS */
         .stats-bar { 
-    display: flex; 
-    gap: 40px; 
-    margin-top: 45px; 
-    justify-content: center; /* Asztalin is legyen középen az egész blokk */
-    flex-wrap: wrap;         /* Ha nem fér el, törje meg a sort */
+    display: grid;
+    /* Alapértelmezett: 3 oszlop asztali gépen */
+    grid-template-columns: repeat(3, 1fr); 
+    gap: 20px; 
+    margin: 45px auto 0 auto; 
+    max-width: 1000px; /* Ne nyúljon szét túl hosszan */
+    width: 90%;       /* Maradjon egy kis margó kétoldalt */
 }
 
 .stat-item {
-    text-align: center;      /* A szöveg és a szám is legyen középen az elemen belül */
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Vízszintes központosítás elemen belül */
 }
 
 .stat-item b { 
@@ -156,16 +161,20 @@
         @media (max-width: 480px) {
             .logo { font-size: 1rem; }
             .nav-buttons button#donate-btn { display: none; }
-            .stats-bar { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; }
             .stats-bar {
-        flex-direction: column; /* Egymás alá kerülnek az elemek */
-        gap: 25px;              /* Kicsit kisebb távolság köztük */
-        align-items: center;    /* Vízszintesen középre teszi őket */
-        margin-top: 30px;
+        /* Egy oszlopba kényszerítjük, így minden egymás alá kerül */
+        grid-template-columns: 1fr; 
+        gap: 30px;
+        justify-content: center;
+        text-align: center;
     }
-    
     .stat-item b {
-        font-size: 2rem;        /* Mobilon kicsit kisebb betűméret, hogy ne legyen bumfordi */
+        font-size: 2.2rem !important; /* !important, hogy biztosan felülírja a régit */
+    }
+
+    .stat-item span {
+        font-size: 12px;
+        letter-spacing: 1px;
     }
         }
     </style>
@@ -441,6 +450,7 @@ window.onload = startApp;
 </script>
 </body>
 </html>
+
 
 
 
