--- a/meccsek.html
+++ b/meccsek.html
@@ -1054,11 +1054,13 @@ async function startApp() {
 
     try {
         if (typeof Clerk !== 'undefined') {
-            await Clerk.load();
+            // 1. Clerk betöltése útvonalakkal (Segít a belső linkeknek)
+            await Clerk.load({
+                signInUrl: '/meccsek.html',
+                signUpUrl: '/meccsek.html'
+            });
 
             Clerk.addListener(({ user }) => {
-                // CSAK AKKOR törlünk, ha már egyszer rendesen betöltött az oldal (isInitialized)
-                // és a felhasználó VALÓBAN kijelentkezett
                 if (isInitialized && !user && localStorage.getItem('lp_activeBets')) {
                     console.log("Valódi kijelentkezés, adatok törlése...");
                     localStorage.removeItem('lp_activeBets');
@@ -1077,26 +1079,33 @@ async function startApp() {
 
                 await loadInitialBalance(); 
 
-                // PRÓBÁLD MEG ÍGY: Ha a szerver hibát dob, ne álljon meg a script
                 try {
                     if (typeof loadUserBetsFromServer === 'function') {
                         await loadUserBetsFromServer();
                     }
                 } catch (betError) {
-                    console.warn("Szerveroldali fogadások nem elérhetők, marad a helyi tároló.");
+                    console.warn("Szerveroldali fogadások nem elérhetők.");
                 }
 
-                isInitialized = true; // <--- Itt jelezzük, hogy a belépett user adatai betöltődtek
+                isInitialized = true; 
             } else {
                 const lb = document.getElementById('login-btn');
                 if (lb) { 
                     lb.style.display = 'block'; 
-                    lb.onclick = () => Clerk.openSignIn({ afterSignInUrl: window.location.href });
+                    // 2. A "Continue" gomb fixálása a routing: 'virtual' segítségével
+                    lb.onclick = () => Clerk.openSignIn({ 
+                        routing: 'virtual',
+                        afterSignInUrl: window.location.origin + '/meccsek.html',
+                        afterSignUpUrl: window.location.origin + '/meccsek.html',
+                        signInUrl: '/meccsek.html',
+                        signUpUrl: '/meccsek.html'
+                    });
                 }
                 isInitialized = true;
             }
         }
 
+        // Többi funkció hívása változatlan marad
         await updateData();
         await checkBetResults(); 
 
@@ -1109,7 +1118,9 @@ async function startApp() {
             await checkBetResults();
         }, 30000);
 
-    } catch (e) { console.error("StartApp error:", e); }
+    } catch (e) { 
+        console.error("StartApp error:", e); 
+    }
 }
 
 // --- MOBIL NAVIGÁCIÓ JAVÍTÁSA ---
@@ -1149,6 +1160,7 @@ window.addEventListener('load', startApp);
     </script>
 </body>
 </html>
+
 
 
 
