--- a/meccsek.html
+++ b/meccsek.html
@@ -1089,21 +1089,28 @@ async function startApp() {
 
                 isInitialized = true; 
             } else {
-                const lb = document.getElementById('login-btn');
-                if (lb) { 
-                    lb.style.display = 'block'; 
-                    // 2. A "Continue" gomb fixálása a routing: 'virtual' segítségével
-                    lb.onclick = () => Clerk.openSignIn({ 
-                        routing: 'virtual',
-                        afterSignInUrl: window.location.origin + '/meccsek.html',
-                        afterSignUpUrl: window.location.origin + '/meccsek.html',
-                        signInUrl: '/meccsek.html',
-                        signUpUrl: '/meccsek.html'
-                    });
-                }
-                isInitialized = true;
-            }
-        }
+    const lb = document.getElementById('login-btn');
+    if (lb) { 
+        lb.style.display = 'block'; 
+        
+        lb.onclick = (e) => {
+            // 1. Megállítjuk az oldal frissülését / ugrását
+            e.preventDefault(); 
+            e.stopPropagation();
+
+            // 2. Kifejezetten a SignUP-ot (regisztrációt) nyitjuk meg, ha azt szeretnéd
+            // Vagy használd a Clerk.openSignIn-t, aminek az alján ott a váltás
+            Clerk.openSignUp({ 
+                routing: 'virtual', // Ez megakadályozza, hogy az URL megváltozzon
+                afterSignUpUrl: window.location.href,
+                afterSignInUrl: window.location.href,
+                signInUrl: '/meccsek.html',
+                signUpUrl: '/meccsek.html'
+            });
+        };
+    }
+    isInitialized = true;
+}
 
         // Többi funkció hívása változatlan marad
         await updateData();
@@ -1160,6 +1167,7 @@ window.addEventListener('load', startApp);
     </script>
 </body>
 </html>
+
 
 
 
