--- a/meccsek.html
+++ b/meccsek.html
@@ -1043,16 +1043,11 @@ async function loadUserBetsFromServer() {
 }
 
 // --- 7. INDÍTÁS ---
-Igen, a szerkezet már majdnem tökéletes, de van benne egy apró szintaktikai hiba (egy rossz helyre tett kapcsos zárójel), ami miatt a vendég mód (else ág) nem futna le megfelelően.
-
-Javítottam a zárójelezést és kicsit finomítottam az isInitialized elhelyezésén, hogy véletlenül se akadjon össze a regisztrációval.
-A végleges, javított kód (Meccsek.html / Home.html)
-JavaScript
-
 let isInitialized = false;
 
 async function startApp() {
     let t = 0;
+    // 1. Várakozás a Clerk-re (max 3 mp)
     while (typeof Clerk === 'undefined' && t < 30) { 
         await new Promise(r => setTimeout(r, 100)); 
         t++; 
@@ -1060,27 +1055,29 @@ async function startApp() {
 
     try {
         if (typeof Clerk !== 'undefined') {
+            // 2. Clerk inicializálása - fixen a meccsek.html-re lőve
             await Clerk.load({
-                signInUrl: window.location.pathname, // Dinamikusan az aktuális oldal
-                signUpUrl: window.location.pathname
+                signInUrl: '/meccsek.html',
+                signUpUrl: '/meccsek.html'
             });
 
+            // 3. Kijelentkezés figyelő
             Clerk.addListener(({ user }) => {
-                // Csak akkor avatkozunk be, ha a user konkrétan NULL (kijelentkezett)
+                // Csak akkor avatkozunk be, ha a user kijelentkezett
                 if (isInitialized && user === null) {
-                    console.log("Valódi kijelentkezés, adatok törlése...");
+                    console.log("Kijelentkezés észlelve, takarítás...");
                     localStorage.removeItem('lp_activeBets');
                     window.userBalance = 0;
-                    window.location.reload(); 
+                    window.location.href = '/meccsek.html'; 
                 }
             });
 
             if (Clerk.user) {
-                // BEJELENTKEZETT USER
+                // BEJELENTKEZETT USER ÁG
                 const userBtn = document.getElementById('user-button');
                 if(userBtn) {
                     Clerk.mountUserButton(userBtn, {
-                        afterSignOutUrl: window.location.origin + window.location.pathname
+                        afterSignOutUrl: window.location.origin + '/meccsek.html'
                     });
                 }
 
@@ -1093,48 +1090,45 @@ async function startApp() {
                 } catch (betError) {
                     console.warn("Szerveroldali adatok nem elérhetők.");
                 }
-
-                isInitialized = true; 
             } else {
-                // VENDÉG MÓD
+                // VENDÉG MÓD ÁG
                 const lb = document.getElementById('login-btn');
                 if (lb) { 
                     lb.style.display = 'block'; 
                     lb.onclick = (e) => {
                         e.preventDefault(); 
                         e.stopPropagation();
-
+                        
                         Clerk.openSignUp({ 
                             routing: 'virtual',
-                            afterSignUpUrl: window.location.origin + window.location.pathname,
-                            afterSignInUrl: window.location.origin + window.location.pathname
+                            afterSignUpUrl: window.location.origin + '/meccsek.html',
+                            afterSignInUrl: window.location.origin + '/meccsek.html',
+                            signInUrl: '/meccsek.html',
+                            signUpUrl: '/meccsek.html'
                         });
                     };
                 }
-                // Itt is jelezzük, hogy az alapállapot betöltött
-                isInitialized = true; 
             }
+            
+            isInitialized = true;
         }
-    } catch (e) {
-        console.error("Hiba az indításkor:", e);
-    }
-}
 
-        // Többi funkció hívása változatlan marad
-        await updateData();
-        await checkBetResults(); 
+        // 4. Meccsek oldal specifikus funkciói
+        if (typeof updateData === 'function') await updateData();
+        if (typeof checkBetResults === 'function') await checkBetResults(); 
 
         if (typeof renderDateStrip === 'function') renderDateStrip();
         if (typeof renderLeagues === 'function') renderLeagues();
         if (typeof renderMatches === 'function') renderMatches();
 
+        // 5. Automata frissítés
         setInterval(async () => {
-            await updateData();
-            await checkBetResults();
+            if (typeof updateData === 'function') await updateData();
+            if (typeof checkBetResults === 'function') await checkBetResults();
         }, 30000);
 
-    } catch (e) { 
-        console.error("StartApp error:", e); 
+    } catch (e) {
+        console.error("Meccsek oldal hiba:", e);
     }
 }
 
@@ -1175,6 +1169,7 @@ window.addEventListener('load', startApp);
     </script>
 </body>
 </html>
+
 
 
 
