--- a/meccsek.html
+++ b/meccsek.html
@@ -1046,8 +1046,8 @@ async function loadUserBetsFromServer() {
 let isInitialized = false;
 
 async function startApp() {
+    // 1. Várakozás a Clerk betöltésére
     let t = 0;
-    // 1. Várakozás a Clerk-re (max 3 mp)
     while (typeof Clerk === 'undefined' && t < 30) { 
         await new Promise(r => setTimeout(r, 100)); 
         t++; 
@@ -1055,32 +1055,34 @@ async function startApp() {
 
     try {
         if (typeof Clerk !== 'undefined') {
-            // 2. Clerk inicializálása - fixen a meccsek.html-re lőve
+            // 2. Clerk inicializálása - Megadjuk az útvonalakat a belső linkeknek
             await Clerk.load({
-                signInUrl: '/meccsek.html',
-                signUpUrl: '/meccsek.html'
+                signInUrl: window.location.pathname,
+                signUpUrl: window.location.pathname
             });
 
-            // 3. Kijelentkezés figyelő
+            // 3. Kijelentkezés figyelő (Listener)
             Clerk.addListener(({ user }) => {
-                // Csak akkor avatkozunk be, ha a user kijelentkezett
+                // Csak akkor avatkozunk be, ha valódi kijelentkezés történt (user === null)
+                // Az isInitialized biztosítja, hogy ne reloadoljon bejelentkezés közben
                 if (isInitialized && user === null) {
                     console.log("Kijelentkezés észlelve, takarítás...");
                     localStorage.removeItem('lp_activeBets');
                     window.userBalance = 0;
-                    window.location.href = '/meccsek.html'; 
+                    window.location.reload(); 
                 }
             });
 
             if (Clerk.user) {
-                // BEJELENTKEZETT USER ÁG
+                // --- BEJELENTKEZETT FELHASZNÁLÓ ---
                 const userBtn = document.getElementById('user-button');
                 if(userBtn) {
                     Clerk.mountUserButton(userBtn, {
-                        afterSignOutUrl: window.location.origin + '/meccsek.html'
+                        afterSignOutUrl: window.location.origin + window.location.pathname
                     });
                 }
 
+                // Egyenleg és fogadások betöltése
                 if (typeof loadInitialBalance === 'function') await loadInitialBalance(); 
 
                 try {
@@ -1090,45 +1092,50 @@ async function startApp() {
                 } catch (betError) {
                     console.warn("Szerveroldali adatok nem elérhetők.");
                 }
+
+                isInitialized = true; 
             } else {
-                // VENDÉG MÓD ÁG
+                // --- VENDÉG MÓD (Bejelentkezés gomb kezelése) ---
                 const lb = document.getElementById('login-btn');
                 if (lb) { 
                     lb.style.display = 'block'; 
                     lb.onclick = (e) => {
+                        // Megállítjuk az oldal frissülését
                         e.preventDefault(); 
                         e.stopPropagation();
-                        
+
+                        // A 'virtual' routing és a konkrét URL-ek megadása 
+                        // javítja ki a 'Continue' és a 'Sign in' link hibáját
                         Clerk.openSignUp({ 
                             routing: 'virtual',
-                            afterSignUpUrl: window.location.origin + '/meccsek.html',
-                            afterSignInUrl: window.location.origin + '/meccsek.html',
-                            signInUrl: '/meccsek.html',
-                            signUpUrl: '/meccsek.html'
+                            signInUrl: window.location.pathname,
+                            signUpUrl: window.location.pathname,
+                            afterSignUpUrl: window.location.origin + window.location.pathname,
+                            afterSignInUrl: window.location.origin + window.location.pathname
                         });
                     };
                 }
+                isInitialized = true; 
             }
-            
-            isInitialized = true;
         }
 
-        // 4. Meccsek oldal specifikus funkciói
+        // 4. Oldal-specifikus adatok frissítése és renderelése
         if (typeof updateData === 'function') await updateData();
         if (typeof checkBetResults === 'function') await checkBetResults(); 
 
+        // UI elemek kirajzolása (ha léteznek a függvények)
         if (typeof renderDateStrip === 'function') renderDateStrip();
         if (typeof renderLeagues === 'function') renderLeagues();
         if (typeof renderMatches === 'function') renderMatches();
 
-        // 5. Automata frissítés
+        // 5. Automata frissítés 30 másodpercenként
         setInterval(async () => {
             if (typeof updateData === 'function') await updateData();
             if (typeof checkBetResults === 'function') await checkBetResults();
         }, 30000);
 
     } catch (e) {
-        console.error("Meccsek oldal hiba:", e);
+        console.error("Hiba a startApp futása során:", e);
     }
 }
 
@@ -1169,6 +1176,7 @@ window.addEventListener('load', startApp);
     </script>
 </body>
 </html>
+
 
 
 
